--- a/react/package.json
+++ b/react/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "cobe": "^0.6.4",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.523.0",
+    "motion": "^12.19.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
