--- a/react/package.json
+++ b/react/package.json
@@ -13,10 +13,13 @@
     "@tailwindcss/vite": "^4.1.10",
     "cobe": "^0.6.4",
     "framer-motion": "^12.18.1",
+    "lib-utils-ts": "^0.0.0-test",
     "lucide-react": "^0.523.0",
-    "motion": "^12.19.2",
+    "motion": "^12.20.2",
+    "next": "^15.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.10"
   },
